--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "uxgood/mini-framework-bundle",
-    "description": "Symfony MiniFrameworkBundle",
     "type": "symfony-bundle",
+    "homepage": "https://github.com/uxgood/mini-framework-bundle",
+    "description": "Symfony MiniFrameworkBundle",
     "license": "MIT",
     "authors": [
         {
@@ -9,6 +10,31 @@
             "email": "uxgood.org@gmail.com"
         }
     ],
+    "require": {
+        "symfony/dependency-injection": "^4.2",
+        "symfony/event-dispatcher": "^4.2",
+        "symfony/http-foundation": "^4.2",
+        "symfony/http-kernel": "^4.2",
+        "symfony/routing": "^4.2"
+    },
+    "autoload": {
+        "psr-4": {
+            "UxGood\\Bundle\\MiniFrameworkBundle\\": ""
+        },
+        "exclude-from-classmap": [
+            "/Tests/"
+        ]
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "UxGood\\Bundle\\MiniFrameworkBundle\\Tests\\": "Tests/"
+        }
+    },
     "minimum-stability": "dev",
-    "require": {}
+    "prefer-stable": true,
+    "extra": {
+        "branch-alias": {
+            "dev-master": "0.1-dev"
+        }
+    }
 }
